# spq_plugin_v2

./: .clang-format  .gitignore  CHANGELOG.md  Makefile  Makefile.global.in  README.md  configure  configure.ac  prep_buildtree
.ci/: git-pre-commit.hook
src/backend/distributed/: Makefile  shared_library_init.cpp  spq.control
src/backend/distributed/commands/: alter_table.cpp  begin.cpp  call.cpp  cascade_table_operation_for_connected_relations.cpp  citus_add_local_table_to_metadata.cpp  citus_global_signal.cpp  citus_sequence.cpp  cluster.cpp  collation.cpp  common.cpp  create_distributed_table.cpp  database.cpp  dependencies.cpp  distribute_object_ops.cpp  domain.cpp  drop_distributed_table.cpp  extension.cpp  foreign_constraint.cpp  foreign_data_wrapper.cpp  foreign_server.cpp  function.cpp  grant.cpp  index.cpp  index_pg_source.cpp  local_multi_copy.cpp  multi_copy.cpp  owned.cpp  policy.cpp  publication.cpp  rename.cpp  role.cpp  schema.cpp  seclabel.cpp  statistics.cpp  subscription.cpp  table.cpp  text_search.cpp  trigger.cpp  truncate.cpp  type.cpp  (+4 more)
src/backend/distributed/connection/: connection_configuration.cpp  connection_management.cpp  locally_reserved_shared_connections.cpp  placement_connection.cpp  remote_commands.cpp  shared_connection_stats.cpp  worker_log_messages.cpp
src/backend/distributed/context/: session_ctx.cpp  thread_context.cpp
src/backend/distributed/deparser/: citus_grantutils.cpp  citus_ruleutils.cpp  deparse.cpp  deparse_attribute_stmts.cpp  deparse_collation_stmts.cpp  deparse_database_stmts.cpp  deparse_domain_stmts.cpp  deparse_extension_stmts.cpp  deparse_foreign_data_wrapper_stmts.cpp  deparse_foreign_server_stmts.cpp  deparse_function_stmts.cpp  deparse_owned_stmts.cpp  deparse_publication_stmts.cpp  deparse_role_stmts.cpp  deparse_schema_stmts.cpp  deparse_seclabel_stmts.cpp  deparse_sequence_stmts.cpp  deparse_statistics_stmts.cpp  deparse_table_stmts.cpp  deparse_text_search.cpp  deparse_type_stmts.cpp  deparse_view_stmts.cpp  format_collate.cpp  objectaddress.cpp  qualify.cpp  qualify_aggregate_stmts.cpp  qualify_collation_stmt.cpp  qualify_domain.cpp  qualify_function_stmt.cpp  qualify_publication_stmt.cpp  qualify_role_stmt.cpp  qualify_sequence_stmt.cpp  qualify_statistics_stmt.cpp  qualify_table_stmt.cpp  qualify_text_search_stmts.cpp  qualify_type_stmt.cpp  qualify_view_stmt.cpp  ruleutils_opengauss.cpp
src/backend/distributed/executor/: adaptive_executor.cpp  citus_custom_scan.cpp  directed_acyclic_graph_execution.cpp  distributed_execution_locks.cpp  distributed_intermediate_results.cpp  executor_util_params.cpp  executor_util_tasks.cpp  executor_util_tuples.cpp  insert_select_executor.cpp  intermediate_results.cpp  local_executor.cpp  merge_executor.cpp  multi_executor.cpp  multi_server_executor.cpp  partitioned_intermediate_results.cpp  placement_access.cpp  query_stats.cpp  repartition_executor.cpp  repartition_join_execution.cpp  subplan_execution.cpp  transmit.cpp  tuple_destination.cpp
src/backend/distributed/metadata/: dependency.cpp  distobject.cpp  metadata_cache.cpp  metadata_sync.cpp  metadata_utility.cpp  node_metadata.cpp  pg_get_object_address_13_14_15.cpp
src/backend/distributed/operations/: citus_split_shard_by_split_points.cpp  citus_tools.cpp  create_shards.cpp  delete_protocol.cpp  health_check.cpp  isolate_shards.cpp  modify_multiple_shards.cpp  node_protocol.cpp  replicate_none_dist_table_shard.cpp  shard_cleaner.cpp  shard_rebalancer.cpp  shard_split.cpp  shard_transfer.cpp  spq_create_restore_point.cpp  stage_protocol.cpp  worker_copy_table_to_node_udf.cpp  worker_node_manager.cpp  worker_shard_copy.cpp  worker_split_copy_udf.cpp
src/backend/distributed/planner/: combine_query_planner.cpp  cte_inline.cpp  deparse_shard_query.cpp  distributed_planner.cpp  extended_op_node_utils.cpp  fast_path_router_planner.cpp  function_call_delegation.cpp  insert_select_planner.cpp  intermediate_result_pruning.cpp  local_distributed_join_planner.cpp  local_plan_cache.cpp  merge_planner.cpp  multi_explain.cpp  multi_join_order.cpp  multi_logical_optimizer.cpp  multi_logical_planner.cpp  multi_physical_planner.cpp  multi_router_planner.cpp  query_colocation_checker.cpp  query_pushdown_planning.cpp  recursive_planning.cpp  relation_restriction_equivalence.cpp  shard_pruning.cpp  tdigest_extension.cpp
src/backend/distributed/progress/: multi_progress.cpp
src/backend/distributed/relay/: relay_event_utility.cpp
src/backend/distributed/sql/: spq--2.0.0.sql
src/backend/distributed/test/: citus_depended_object.test  shard_rebalancer.test
src/backend/distributed/transaction/: backend_data.cpp  distributed_deadlock_detection.cpp  lock_graph.cpp  relation_access_tracking.cpp  remote_transaction.cpp  transaction_management.cpp  transaction_recovery.cpp  worker_transaction.cpp
src/backend/distributed/utils/: acquire_lock.cpp  (+44 more)
src/include/: .gitignore  pg_version_compat.h  pg_version_constants.h  spq_config.h.in  spq_version.h.in  type_cast.h
src/include/distributed/: adaptive_executor.h  argutils.h  backend_data.h  background_jobs.h  cancel_utils.h  citus_acquire_lock.h  citus_clauses.h  citus_custom_scan.h  citus_depended_object.h  citus_nodefuncs.h  citus_nodes.h  citus_ruleutils.h  citus_safe_lib.h  colocation_utils.h  combine_query_planner.h  commands.h  connection_management.h  coordinator_protocol.h  cte_inline.h  deparse_shard_query.h  deparser.h  directed_acyclic_graph_execution.h  distributed_deadlock_detection.h  distributed_execution_locks.h  distributed_planner.h  distribution_column.h  enterprise.h  error_codes.h  errormessage.h  executor_util.h  extended_op_node_utils.h  foreign_key_relationship.h  function_call_delegation.h  function_utils.h  hash_helpers.h  insert_select_executor.h  insert_select_planner.h  intermediate_result_pruning.h  intermediate_results.h  jsonbutils.h  (+81 more)
src/spq_backup/: Makefile  pg_receivexlog.cpp  pg_recvlogical.cpp  receivelog.cpp  receivelog.h  spq_backup.cpp  streamutil.cpp  streamutil.h  xlogreader.cpp
src/test/regress/: Makefile  pg_regress_multi.pl  spq_schedule
(+356 files in other folders)
